[package]
name = "download-extract"
version = "0.1.0"
edition = "2021"

[dependencies]
binstalk-downloader = { version = "^0.13", features = ["zlib-ng"] }
tokio = { version = "^1.43", features = [
  "rt",
  "sync",
], default-features = false }
reqwest = { version = "^0.12", features = ["json"] }
atomic-file-install = "^1.0"
